--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
       <link rel="stylesheet" href="style.css">
       <body>
         <div class="bg">
-          <img class="image-equilibrium" src="/images/image-equilibrium.jpg" alt="image-equilibrium">
+          <img class="image-equilibrium" src="./images/image-equilibrium.jpg" alt="image-equilibrium">
           <h2>Equilibrium #3429</h2>
           <p>Our Equilibrium collection promotes
             <br>balance and calm.
           </p>
           <br>
           <div class="icon-div">
-             <p class="left"><img class="icon" src="/images/icon-ethereum.svg" alt="icon-ethereum"> 0.041 ETH</p>
-              <p class="right"><img class="icon" src="/images/icon-clock.svg" alt="icon-clock"> 3 days left</p>
+             <p class="left"><img class="icon" src="./images/icon-ethereum.svg" alt="icon-ethereum"> 0.041 ETH</p>
+              <p class="right"><img class="icon" src="./images/icon-clock.svg" alt="icon-clock"> 3 days left</p>
          </div>
          <hr>
           <div class="img-container">
-          <img class="image-avatar" src="/images/image-avatar.png" alt="image-avatar"><p class="typ">Creation of <span>Jules Wyvern</span></p>
+          <img class="image-avatar" src="./images/image-avatar.png" alt="image-avatar"><p class="typ">Creation of <span>Jules Wyvern</span></p>
           </div>
         </div>
       </body>
